# Extended-Kalman-Filter-Implementation

./: README.md
log/: latest_list
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: full_system.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/meshes/: back_left_wheel.STL  back_legs.STL  back_right_wheel.STL  base_link.STL  front_left_wheel.STL  front_legs.STL  front_right_wheel.STL
robot_description/urdf/: robot_velocity.xacro.urdf
robot_ekf/: package.xml  setup.cfg  setup.py
robot_ekf/robot_ekf/: ekf_node.py  noisy_odom_node.py  noisy_odom_path_node.py  path_rmse_node.py
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/config/: robot_velocity_controller.yaml
robot_gazebo/launch/: robot_gazebo_velocity.launch.py  test_rsp.launch.py
robot_gazebo/worlds/: empty.world  stairs_fixed.world
robot_path/: package.xml  setup.cfg  setup.py
robot_path/robot_path/: ekf_path_node.py  odom_path_node.py  path_controller.py  test_odom.py
